tests/baselines/reference/computedPropertyNames1.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames1.ts(2,9): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNames1.ts(3,9): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames1.ts (2 errors) ====
    var v = {
        get [0 + 1]() { return 0 },
            ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        set [0 + 1](v: string) { } //No error
            ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }